rnsc/test_data/rns_integration/error/parser/instructions/ldc_number_without_th.rns
.class LdcNumberWithoutTh
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc 42
    return
  .code_end
.method_end
.class_end
